[package]
name = "pacifica"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust SDK for pacifica.fi 🦀"
readme = "README.md"
homepage = "https://github.com/0xOnkel/pacifica"
repository = "https://github.com/0xOnkel/pacifica"
keywords = ["solana", "pacifica", "sdk"]

[dependencies]
base58 = "0.2.0"
ed25519-dalek = "2.2.0"
reqwest = { version = "0.12.23", features = ["json"] }
rust_decimal = "1.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
