[package]
name = "pacifica"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust SDK for pacifica.fi 🦀"
readme = "README.md"
homepage = "https://github.com/0xOnkel/pacifica"
repository = "https://github.com/0xOnkel/pacifica"
keywords = ["solana", "pacifica", "sdk"]

[dependencies]
base58 = "0.2.0"
ed25519-dalek = "2.2.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
]}
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
